Don't enforce the width of the suggest list if it isn't specified in the configuration so that the list cand adjust its width to fit the space needed by the suggest items (avoid the neeed for horizontal scroll).

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/userpicker/userPicker.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/userpicker/userPicker.css
@@ -29,6 +29,8 @@ ul.users {
   /* Leave space for the user avatar. */
   min-height: 30px;
   padding-left: 38px;
+  /* Leave the same space on the right as on the left of the avatar. */
+  padding-right: .2em;
   /* Needed because the avatar is displayed with absolute position. */
   position: relative;
 }
